@@ -13,6 +13,7 @@ Allow to save text note on a ZSF snapshot
 Improved ZX Vision:
 - Allow to hide minimized windows
 - Show, with a dot, when an icon is an open window but minimized
+- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default
 
 Improved Debug CPU:
 - Show view number inside the window and not in the window title
